name:                builder
version:             0.1.0.0
synopsis:            Builder pattern with typeclasses
homepage:            github.com/j-rock/builder
license:             MIT
license-file:        LICENSE
author:              Joseph Rock
maintainer:          wax818@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
